[gd_scene load_steps=18 format=2]

[ext_resource path="res://World/Enviroment/Lighting/FullAreaLight.png" type="Texture" id=1]
[ext_resource path="res://Game State/RunManager/LootManager/LootItems/LootItem.gd" type="Script" id=2]
[ext_resource path="res://UI/Fonts/Lato-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Buttons & Indicators/arrow.png" type="Texture" id=4]

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spawn"
length = 2.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.7, 0.8, 0.9, 1, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ), Vector2( 0, -44 ), Vector2( 0, 40 ), Vector2( 0, 36 ), Vector2( 0, 40 ), Vector2( 0, 39 ), Vector2( 0, 40 ), Vector2( 0, 39 ), Vector2( 0, 40 ), Vector2( 0, 39.5 ), Vector2( 0, 40 ), Vector2( 0, 39.5 ), Vector2( 0, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="SphereMesh" id=2]
radius = 7.0
height = 14.0

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Spawn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="LootItem" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/Spawn = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="CollisionShape2D"]
texture = ExtResource( 1 )
energy = 2.0
range_item_cull_mask = 7

[node name="LootSize" type="MeshInstance2D" parent="CollisionShape2D"]
visible = false
mesh = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
light_mask = 8
scale = Vector2( 0.7, 0.7 )
z_index = 1

[node name="Light2D" type="Light2D" parent="CollisionShape2D/Sprite"]
texture = ExtResource( 1 )
energy = 0.8
range_item_cull_mask = 8

[node name="Interaction" type="Node2D" parent="CollisionShape2D"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 4
position = Vector2( -19, -27 )
z_index = 3
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CollisionShape2D/Interaction"]
light_mask = 4
margin_right = 39.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 5 )
text = "INTERACT"
align = 1
valign = 1
clip_text = true

[node name="Arrow" type="AnimatedSprite" parent="CollisionShape2D/Interaction"]
light_mask = 4
position = Vector2( 19, 12 )
scale = Vector2( 0.6, 0.8 )
frames = SubResource( 10 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape2D/Interaction"]
anims/FadeIn = SubResource( 11 )
anims/FadeOut = SubResource( 12 )
anims/Spawn = SubResource( 13 )

[connection signal="body_entered" from="." to="." method="_on_LootItem_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LootItem_body_exited"]
